fixup for tests after changes