@@ -9,10 +9,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.bsp.config.AuthorisationProperties;
 import uk.gov.hmcts.reform.bsp.config.feign.SendLetterServiceClient;
 import uk.gov.hmcts.reform.bsp.integrations.SlackMessageHelper;
+import uk.gov.hmcts.reform.bsp.models.CheckPostedTaskResponse;
 import uk.gov.hmcts.reform.bsp.models.StaleLetter;
 import uk.gov.hmcts.reform.bsp.models.StaleLetterResponse;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -20,6 +22,7 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.times;
@@ -58,7 +61,7 @@ class BulkPrintChecksServiceTest {
                 LocalDateTime.of(2000, 9, 21, 21, 21, 21),
                 LocalDateTime.of(2001, 9, 21, 21, 21, 21))
             )));
-        doThrow(RuntimeException.class).when(letterClient).markAborted(anyString(), anyString());
+        when(letterClient.runCheckPosted(any(String.class))).thenReturn(new CheckPostedTaskResponse(0));
 
         bulkPrintChecksService.runDailyChecks();
 
@@ -68,9 +71,9 @@ class BulkPrintChecksServiceTest {
         String actual = captor.getValue();
         assertTrue(actual.contains("Bulk Print"),
                    "expected header to mention Bulk Print, was:\n" + actual);
-        assertTrue(actual.contains("Investigate Letter c89ad43b-5079-47b2-9984-8a122e115d06"),
+        assertTrue(actual.contains("❗ *Check Stale*: Investigate stale letter: c89ad43b-5079-47b2-9984-8a122e115d06"),
                    "missing first investigate line");
-        assertTrue(actual.contains("Investigate Letter c89ad43b-5079-47b2-9984-8a122e115d07"),
+        assertTrue(actual.contains("❗ *Check Stale*: Investigate stale letter: c89ad43b-5079-47b2-9984-8a122e115d07"),
                    "missing second investigate line");
     }
 
@@ -78,15 +81,9 @@ class BulkPrintChecksServiceTest {
     void runDailyChecks_shouldSendMessageWithNoStaleLettersToCheck() {
         when(letterClient.getStaleLetters()).thenReturn(
             new StaleLetterResponse(
-                1, List.of(new StaleLetter(
-                UUID.fromString("c89ad43b-5079-47b2-9984-8a122e115d06"),
-                "mosh",
-                "kupo",
-                LocalDateTime.of(2000, 8, 20, 20, 20, 20),
-                LocalDateTime.of(2001, 8, 20, 20, 20, 20)
-            ))
+                0, Collections.emptyList()
             ));
-
+        when(letterClient.runCheckPosted(any(String.class))).thenReturn(new CheckPostedTaskResponse(0));
         bulkPrintChecksService.runDailyChecks();
 
         ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
@@ -96,7 +93,7 @@ class BulkPrintChecksServiceTest {
 
         assertAll("bulk-print no-issues summary",
                   () -> assertTrue(actual.contains("Bulk Print Daily Check")),
-                  () -> assertTrue(actual.contains("All clear! No print issues detected"))
+                  () -> assertTrue(actual.contains(":tada: *No print issues were detected*"))
         );
     }
 
@@ -114,7 +111,7 @@ class BulkPrintChecksServiceTest {
             ));
         doThrow(new RuntimeException("Slack API failure"))
             .when(slackHelper).sendLongMessage(anyString());
-
+        when(letterClient.runCheckPosted(any(String.class))).thenReturn(new CheckPostedTaskResponse(0));
         RuntimeException ex = assertThrows(
             RuntimeException.class,
             () -> bulkPrintChecksService.runDailyChecks()
